Bug 140925 - Dragging are (super) high resolution PNG in Impress with Skia Raster not as smooth (compared to Writer)
Summary: Dragging are (super) high resolution PNG in Impress with Skia Raster not as s...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.2.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:7.2.0
Keywords:
Depends on:
Blocks: Skia
  Show dependency treegraph
 
Reported: 2021-03-09 18:16 UTC by Telesto
Modified: 2021-03-10 18:48 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
Example file (679.86 KB, application/vnd.oasis.opendocument.presentation)
2021-03-09 18:19 UTC, Telesto
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Telesto 2021-03-09 18:16:38 UTC
Description:
Dragging are (super) high resolution PNG in Impress with Skia Raster not as smooth (compared to Writer)

Steps to Reproduce:
1. Open the attached file
2. Click and starting dragging left/right.. notice delay

Actual Results:
Some unresponsiveness. 

Expected Results:
Smooth drag & drop (as Writer)


Reproducible: Always


User Profile Reset: No



Additional Info:
Version: 7.2.0.0.alpha0+ (x64) / LibreOffice Community
Build ID: dc3b64dcbfb0a49c0be65bd8d73ed4e6d3828a21
CPU threads: 4; OS: Windows 6.3 Build 9600; UI render: Skia/Raster; VCL: win
Locale: nl-NL (nl_NL); UI: nl-NL
Calc: CL
Comment 1 Telesto 2021-03-09 18:19:01 UTC
Created attachment 170377 [details]
Example file
Comment 2 Commit Notification 2021-03-10 18:46:10 UTC
Luboš Luňák committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/bf2ba0f39be62978b512d6ed101219b9dd0dc6e4

access pixels directly if SkImage is a raster one (tdf#140925)

It will be available in 7.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Commit Notification 2021-03-10 18:47:21 UTC
Luboš Luňák committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/88b7ac11be5548f46c3664117173699046895610

cache extensive downscaling in GPU mode too (tdf#140925)

It will be available in 7.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.