cache extensive downscaling in GPU mode too (tdf#140925)

Change-Id: I0d77cf157bc1f669da906ed55feedee6bc78ba7b
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/112252
Tested-by: Jenkins
Reviewed-by: Luboš Luňák <l.lunak@collabora.com>